syntax = "proto3";

// 固定写法，表示生成在当前目录;然后生成的go代码以proto为包名
option go_package = "./;proto";

service Greeter {
  rpc GetStream(StreamReqData) returns(stream StreamRspData); //服务端流模式
  rpc PutStream(stream StreamReqData) returns(StreamRspData); //客户端流模式
  rpc AllStream(stream StreamReqData) returns(stream StreamRspData); //双向流模式
}

message StreamReqData {
  string data = 1;  // 数字代表编号，不是值
}

message StreamRspData {
  string data = 1;
}